# detbench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/detbench/: __init__.py  analysis.py  cli.py  converter.py  dataset.py  losses.py  runner.py
tests/: test_converter.py  test_losses.py
